--- a/resources/config.ini
+++ b/resources/config.ini
@@ -7,7 +7,7 @@ c1=0.2
 c2=0.2
 [GA]
 crossoverProbability=0.9
-mutationProbability=0.1
+mutationProbability=0.06
 crossoverPointsNumber=1
 mutatePointsNumber=1
 crossoverOperator=1
@@ -18,6 +18,13 @@ xcraziness = 0.0001
 ws = 0.9
 we = 0.4
 u = 2
+[MCASSA]
+crazyProbability = 0.3
+xcraziness = 0.0001
+ws = 0.9
+we = 0.4
+u = 2
 [BA]
 
 [FA]
+
